--- a/packages/tools/docusaurus/docs/guides/examples/components/button.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/button.mdx
@@ -1171,7 +1171,7 @@ Import `Button` component and add it to the `Template` that we'll bind **Stories
 
 ### Import **Storybook Controls** helpers
 
-Import dereferenced component **JSON Schema** and `getArgsShared` helper to generate **Storybook Controls**, and parameterize [**Storybook JSON Schema Addon**](../../../integration/storybook/schema#storybook-json-schema-addon).
+Import dereferenced component **JSON Schema** and `getArgsShared` helper to generate **Storybook Controls**, and parameterize [**Storybook JSON Schema Addon**](../../../integration/storybook/schema.mdx#storybook-json-schema-addon).
 
 <CH.Code>
 ```jsx src/components/button/Button.stories.jsx focus=2,4,6,15:17
