--- a/packages/tools/docusaurus/docs/guides/examples/components/section.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/section.mdx
@@ -2639,7 +2639,7 @@ Import `TeaserCard` **Stories** as demo content for our `Section` **Story**. Add
 
 ### Import **Storybook Controls** helpers
 
-Import dereferenced component **JSON Schema** and `getArgsShared` helper to generate **Storybook Controls**, and parameterize [**Storybook JSON Schema Addon**](../../../integration/storybook/schema#storybook-json-schema-addon).
+Import dereferenced component **JSON Schema** and `getArgsShared` helper to generate **Storybook Controls**, and parameterize [**Storybook JSON Schema Addon**](../../../integration/storybook/schema.mdx#storybook-json-schema-addon).
 
 <CH.Code>
 ```jsx src/components/section/Section.stories.jsx focus=2:3,5:6,11,31
