--- a/packages/tools/docusaurus/docs/guides/examples/components/headline.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/headline.mdx
@@ -1631,7 +1631,7 @@ Import `Headline` component and add it to the `Template` that we'll bind **Stori
 
 ### Import **Storybook Controls** helpers
 
-Import dereferenced component **JSON Schema** and `getArgsShared` helper to generate **Storybook Controls**, and parameterize [**Storybook JSON Schema Addon**](../../../integration/storybook/schema#storybook-json-schema-addon).
+Import dereferenced component **JSON Schema** and `getArgsShared` helper to generate **Storybook Controls**, and parameterize [**Storybook JSON Schema Addon**](../../../integration/storybook/schema.mdx#storybook-json-schema-addon).
 
 <CH.Code>
 ```jsx src/components/headline/Headline.stories.jsx focus=2,4,6,15:17
