--- a/packages/tools/docusaurus/docs/guides/examples/components/teaser-card.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/teaser-card.mdx
@@ -1251,7 +1251,7 @@ Import `TeaserCard` component and add it to the `Template` that we'll bind **Sto
 
 ### Import **Storybook Controls** helpers
 
-Import dereferenced component **JSON Schema** and `getArgsShared` helper to generate **Storybook Controls**, and parameterize [**Storybook JSON Schema Addon**](../../../integration/storybook/schema#storybook-json-schema-addon).
+Import dereferenced component **JSON Schema** and `getArgsShared` helper to generate **Storybook Controls**, and parameterize [**Storybook JSON Schema Addon**](../../../integration/storybook/schema.mdx#storybook-json-schema-addon).
 
 <CH.Code>
 ```jsx src/components/teaser-card/TeaserCard.stories.jsx focus=2,4,6,15:17
