--- a/packages/tools/docusaurus/docs/intro/index.mdx
+++ b/packages/tools/docusaurus/docs/intro/index.mdx
@@ -16,7 +16,7 @@ Check out the following video for a more in-depth demonstration, and see kicksta
 <iframe
   width="50%"
   height="280"
-  src="https://www.youtube.com/watch?v=ANYbcOF4B9A"
+  src="https://www.youtube.com/embed/ANYbcOF4B9A"
   title="YouTube video player"
   frameBorder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
